# remote_manipulation_markers

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: SpecifiedGrasp.action  SpecifiedPose.action
include/remote_manipulation_markers/: ClickAndRefine.h  ClickablePointCloud.h  Common.h  ConstrainedPositioning.h  FreePositioning.h  GripperMarkerVis.h  PointAndClick.h  PointAndClickDemo.h  RefinablePose.h  TestClickAndRefine.h  TestCloud.h  point_cloud_manipulation.h
launch/: constrained_positioning.launch  free_positioning.launch  point_and_click.launch  point_and_click_demo.launch
msg/: GenerateGrasps.msg
src/: ClickAndRefine.cpp  ClickablePointCloud.cpp  Common.cpp  ConstrainedPositioning.cpp  FreePositioning.cpp  GripperMarkerVis.cpp  PointAndClick.cpp  PointAndClickDemo.cpp  RefinablePose.cpp  TestClickAndRefine.cpp  TestCloud.cpp  point_cloud_manipulation.cpp
srv/: CreateSphere.srv  ModeSwitch.srv
